--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -146,7 +146,10 @@ padding-bottom: 20px;}
     margin: 0%;
     clear: both;
     text-align: center;
-    color: #cccccc;}
+    color: #cccccc;
+    position: relative !important; 
+    top: auto !important; 
+    width:100%;}
 
     /*Responsive*/
  .responsive{position: fixed;
